# CPP_Pros

./: README.md
IVPAlg/: .editorconfig  CMakeLists.txt
IVPAlg/luaivp/: CMakeLists.txt  algbase.cpp  algbase.h  alginterface.cpp  alginterface.h  algiw.cpp  algiw.h  luaparser.cpp  luaparser.h  utils.cpp  utils.h
OCAlg/: algbase.cpp  algbase.h  alginterface.h  algnewton.cpp  algnewton.h  test_main.cpp  utils.cpp  utils.h
boeOC/: boe_oc.cpp  boe_oc.h  gamma_algo_interface.cpp  gamma_algo_interface.h  lua_boe_oc.cpp  lua_boe_oc.h
boeOC/20190722/: boe_oc.cpp  boe_oc.h
boeOC/boeOC/: CH1_REG_VOL_gam_tm.csv  boe_oc.cpp  boe_oc.h  gamma_algo_interface.h  test_main.cpp
boeOC/new/: boe_oc.cpp  boe_oc.h
boeOC/old/: boe_oc.cpp  boe_oc.h  boe_oc2.h  gamma_algo_interface.h
inertial_weighted_model/: inertial_weighting.c  inertial_weighting.h
inertial_weighted_model/CPP_Version/: ivp_iw.cpp  test_main.cpp
inertial_weighted_model/new/: ivp_iw.cpp  ivp_iw.h
inertial_weighting_model/: inertial_weighting.c  inertial_weighting.h
inertial_weighting_model/CPP_Version/: CH1_InitReg.csv  gamma_algo_interface.h  ivp_iw.h
